[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pension-recommendation-api"
version = "1.0.0"
dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
    "pandas==2.0.3",
    "openpyxl==3.1.2",
    "Werkzeug==2.3.7",
    "python-dateutil==2.8.2",
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]

[metadata]
python_requires = ">=3.9,<3.12"
